# videocatalog

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  split.py  videocatalog.py
.claude/: settings.json  settings.local.json
scripts/: clean.sh  docker-build-gpu.sh  docker-build.sh  docker-run.sh  docker-serve.sh
tests/: __init__.py  conftest.py  generate_golden.py  test_scene_splits.py
videocatalog/: __init__.py  cli.py  detection.py  gallery.py  models.py  preprocess.py  processing.py  server.py  splitting.py  thumbnails.py  transcription.py  utils.py
videocatalog/templates/: gallery.css  gallery.html.j2  gallery.js
