[project]
name = "videocatalog"
version = "0.1.0"
description = "Split videos at recording boundaries and generate searchable gallery"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.0",
    "av==16.0.1",  # 16.1.0 lacks Linux py3.12 wheels
]

[project.scripts]
videocatalog = "videocatalog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
