[project]
name = "videocatalog"
version = "0.1.0"
description = "Split videos at recording boundaries and generate searchable gallery"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.0.0",
    "av==16.0.1",  # 16.1.0 lacks Linux py3.12 wheels
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=11.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
videocatalog = "videocatalog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
